Bug squashing ad fixing the nav

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -20,24 +20,27 @@ Supermecado One
 
 *{margin: 0;padding:0;}
 html, body{
-  padding: 0;
-  margin: 0;
   width:100%;
   height: 100%;
+  margin: 0;
+  padding: 0;
 }
 body {
+  display: flex;
+  padding: 0;
   background-color: #F8F8F8;
+  background-color: red;
+
   font-family: 'Rubik', sans-serif;
   font-size: 20px;
   font-weight: 300;
-  padding: 0;
-  display: flex;
+
   justify-content: center;
-  background-color: red;
 }
 .container{
   width: 100%;
   height: 100%;
+
   background-color: green;
 }
 
@@ -45,40 +48,51 @@ body {
 
 /*----------NAVIGATION----------*/
 nav {
-  display: none;
-  /*remove this when done ^^^*/
-  background-color: white;
+
   width: 100%;
-  /*position: fixed; Add this later*/
+
+  background-color: white;
+  position: fixed;
+  z-index: 10;
 }
 .intro {
+  display: flex;
+
   width: 100%;
-  font-family: 'Supermercado One', 'Rubik', sans-serif;
+  min-height: 80px;
   margin: 0;
   padding: 0;
-  min-height: 80px;
-  display: flex;
+
+  font-family: 'Supermercado One', 'Rubik', sans-serif;
+
   align-items: center;
 }
-intro p {
-  background-color: aliceblue;
+.intro p {
+  display: flex;
+
   width: 100%;
   margin: 0;
-  display: flex;
+
+  background-color: aliceblue;
+
   justify-content: space-between;
 }
 .intro p a {
   padding: 5px 20px;
+
   text-decoration: none;
 }
 .navigation:first-child{
   font-size: 2em;
 }
 nav ul {
-  background-color: purple;
-  list-style-type: none;
+  display: none;
   margin: 0;
   padding: 30px;
+
+  list-style-type: none;
+
+  background-color: purple;
 }
 nav ul li {
   margin-bottom: 20px;
@@ -87,39 +101,63 @@ nav ul li {
 
 /*--------------CONTENT--------------*/
 .main-content{
-  margin-top: 80px; /*To account for the header*/
-  width: 100%;
-  height: 100%;
-  background-color: pink;
   display: flex;
-  align-items: center;;
-  justify-content: flex-start;;
   flex-direction: column;
+
+  width: 100%;
+  height: 100%;  min-height: 2000px;  margin-top: 80px; /*To account for the header*/
+
+  background-color: pink;
+
+  align-items: center;
+  justify-content: flex-start;
 }
 
 .image-carousel {
-  background-color: indigo;
   width: 100%;
+
+  background-color: indigo;
 }
 
 .placeholder-carousel{
   position: relative;
+
   width: 100%;
   height: 400px;
-  background-color: blue;
+
+  background-color: yellow;
 
 }
 
 .water-box{
 	position: relative;
+
 	width:100%;
   height: 115px;
-  -webkit-clip-path: url(#watermask);
+  margin-top: -45px;
+
+  opacity: .7;
+	background-color: RoyalBlue;
+
 	clip-path:url(#waterMask);
-	background-color: yellow;
 }
 
+.mini-sect{
+  width: 100%;
+  min-height: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: violet;
+}
 
+.mini-sect h1 {
+  margin: 10px;
+}
+.mini-sect p{
+  margin: 40px;
+  margin-top: 10px;
+}
 /*MEDIUM*/
 
 
